[project]
name = "NMODL"
authors = [
    {name = "Blue Brain Project", email = "bbp-ou-hpc@groupes.epfl.ch"},
]
description = "NEURON Modeling Language Source-to-Source Compiler Framework"
license = {file = "LICENSE"}
readme = {file = "README.rst", content-type = "text/x-rst"}
dynamic = ["version"]
dependencies = [
    "find_libpython",
    "sympy>=1.3",
    "setuptools",
]
scripts = {nmodl = "nmodl._binwrapper:main"}
requires-python = ">=3.8"

optional-dependencies.test = ["pytest>=3.3.0", "pytest-cov", "numpy"]
optional-dependencies.docs = [
        "jupyter-client",
        "jupyter",
        "myst_parser<2.0.0",
        "mistune<3",
        "nbconvert",
        "nbsphinx>=0.3.2",
        "sphinxcontrib-applehelp<1.0.3", # After this version it needs a toml file to work, no more setup.py
        "sphinxcontrib-htmlhelp<=2.0.0", # After this version it needs a toml file to work, no more setup.py
        "sphinx<6",
        "sphinx-rtd-theme", # needs sphinx < 7
        "docutils<0.20", # needed by sphinx
]

[build-system]
requires = [
    "scikit-build-core",
    "setuptools-scm>=8.0",
    "Jinja2>=2.9.3",
    "PyYAML>=3.13",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["nmodl"]
logging.level = "DEBUG"

[tool.scikit-build.cmake]
verbose = true
version = ">=3.15.0"

[tool.scikit-build.cmake.define]
NMODL_BUILD_WHEEL = "ON"

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = "test/unit/pybind"
